--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,11 +5,20 @@
   padding: 40px 0;
 
   &__cart {
+    width: 100%;
+    &-wrapper {
+      width: 215px;
+      display: flex;
+      justify-content: end;
+      @media (max-width: 1150px) {
+        width: auto;
+      }
+      @media (max-width: 650px) {
+        width: 100%;
+      }
+    }
     @media (max-width: 1150px) {
       margin-top: 20px;
-    }
-    @media (max-width: 650px) {
-      width: 100%;
     }
   }
 
